--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,8 +1,6 @@
 name: Integration
-on: 
-  pull_request:
-    branches:
-      - main
+on: [push]
+
 jobs:
   Integration:
     runs-on: ubuntu-latest
